tests/snapshots/snapshots__pipeline@impredicative_option.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/impredicative_option.pr
---
== tokens ==
VOpen Fn Ident("boxed") LParen RParen Colon UIdent("Option") LParen Forall Ident("a") Dot LParen Ident("a") RParen Arrow Ident("a") RParen Eq UIdent("Some") LParen Lambda LParen Ident("x") RParen Arrow Ident("x") RParen VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Int(IntLit { value: 0, suffix: None }) VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "boxed",
            params: [],
            ret: Some(
                Con(
                    "Option",
                    [
                        Forall(
                            [
                                "a",
                            ],
                            Fun(
                                [
                                    Var(
                                        "a",
                                    ),
                                ],
                                Empty,
                                Var(
                                    "a",
                                ),
                            ),
                        ),
                    ],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "Some",
                        ),
                        span: 243..247,
                    },
                    [
                        Spanned {
                            node: Lam(
                                [
                                    Param {
                                        name: "x",
                                        ty: None,
                                        borrow: false,
                                        default: None,
                                    },
                                ],
                                Spanned {
                                    node: Var(
                                        "x",
                                    ),
                                    span: 256..257,
                                },
                            ),
                            span: 248..257,
                        },
                    ],
                ),
                span: 243..258,
            },
            wheres: [],
            span: 201..258,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 0,
                        suffix: None,
                    },
                ),
                span: 278..279,
            },
            wheres: [],
            span: 260..279,
        },
    ],
}

== types ==
[E1004] Type Error: in `boxed`: impredicative type: a polymorphic type cannot be a type argument to `Option` (a type parameter ranges over monomorphic types). Higher-rank types are allowed as function arguments, results, and declared data fields; wrap the polymorphic type in a data type with a polymorphic field to carry it here.
   ╭─[ <source>:4:1 ]
   │
 4 │ fn boxed() : Option(forall a. (a) -> a) = Some(\(x) -> x)
   │ ────────────────────────────┬────────────────────────────  
   │                             ╰────────────────────────────── in `boxed`: impredicative type: a polymorphic type cannot be a type argument to `Option` (a type parameter ranges over monomorphic types). Higher-rank types are allowed as function arguments, results, and declared data fields; wrap the polymorphic type in a data type with a polymorphic field to carry it here.
───╯
